--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "artificery"
-version = "0.1.0"
+version = "0.1.1"
 description = "A database manager for the Ulsidor Project"
 authors = ["Aduain"]
 readme = "README.md"
@@ -10,6 +10,9 @@ python = "^3.8"
 typer = {extras = ["all"], version = "^0.5.0"}
 pymongo = {extras = ["srv"], version = "^4.1.1"}
 pandas = "^1.4.3"
+
+[tool.poetry.group.dev.dependencies]
+black = {version = "^22.6.0", allow-prereleases = true}
 
 [tool.poetry.scripts]
 artificery = "artificery.main:app"
