--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 typer = {extras = ["all"], version = "^0.5.0"}
 pymongo = {extras = ["srv"], version = "^4.1.1"}
 pandas = "^1.4.3"
+rich = "^12.4.4"
 
 [tool.poetry.group.dev.dependencies]
 black = {version = "^22.6.0", allow-prereleases = true}
